--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>Restaurante El Sabor</h1>
-    <p>¡Bienvenidos a nuestra casa de sabores!</p>
+    <h1>Restaurante Ruta 110</h1>
+    <p>¡Bienvenidos a nuestra casa!</p>
   </header>
 
   <section id="menu">
@@ -31,6 +31,4 @@
   <section id="ubicacion">
     <h2>Ubicación</h2>
     <p>Calle de los Sabores, 123, Madrid, España</p>
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!..." 
-      width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.539337992036!2d-4.7487548233015096!3d40.6400400714046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd408d24aad4b1d7%3A0x8a149b71b98bb937!2sRuta110!5e0!3m2!1ses!2ses!4v1753721003633!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
