--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restaurante El Sabor</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <header>
     <h1>Restaurante Ruta 110</h1>
@@ -31,4 +33,7 @@
   <section id="ubicacion">
     <h2>Ubicación</h2>
     <p>Calle de los Sabores, 123, Madrid, España</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.539337992036!2d-4.7487548233015096!3d40.6400400714046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd408d24aad4b1d7%3A0x8a149b71b98bb937!2sRuta110!5e0!3m2!1ses!2ses!4v1753721003633!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.539337992036!2d-4.7487548233015096!3d40.6400400714046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd408d24aad4b1d7%3A0x8a149b71b98bb937!2sRuta110!5e0!3m2!1ses!2ses!4v1753721003633!5m2!1ses!2ses"
+      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
