--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                 <h2>About</h2>
                 <div class="line-shape"></div>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat dolorum itaque quisquam assumenda maxime recusandae doloremque explicabo necessitatibus illum facere, numquam nemo iste at. Sint laborum vel soluta sequi id!
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat animi, aut eius labore eligendi delectus magni autem mollitia aliquam rem excepturi fuga laboriosam sapiente quas itaque ratione, dolorem iste ad?
+                    Somos un restaurante de comida casera, regentado por una Diana y Cesar, que nos encanta cocinar y hacer sentir a nuestros clientes como en casa.
+                    Esperamos que disfruten de nuestra comida tanto como nosotros disfrutamos al servirla.
+                    Si tienes alguna pregunta o sugerencia, no dudes en contactarnos.
                 </p>        
             </div>
         </div>
