--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Free Car template, with Bootstrap 4" />
+    <meta name="description" content="Restaurante Avila Ruta 110" />
     <meta name="google" content="nositelinkssearchbox">
     <meta name="author" content="@julianjp18">
     <title>Car Template</title>
@@ -20,14 +20,14 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Car templete</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">RESTAURANTE RUTA 110</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    <a class="nav-link js-scroll-trigger" href="#about">QUIENES SOMOS</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#services">Services</a>
